# pyJupiter

./: Untitled.ipynb  minmax.py  pyJupiter.py  pyproject.toml  temp.py  test.py  test.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  pyJupiter-checkpoint.py
